# 2024_2_data_communication-with-deep-learning

./: README.md  main.ipynb  project1.ipynb  project2.ipynb  project3.ipynb  pyproject.toml
